--- a/app/src/main/res/layout/content_calculator.xml
+++ b/app/src/main/res/layout/content_calculator.xml
@@ -15,7 +15,12 @@
     tools:context="com.example.kaya.calculator.CalculatorActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="0"
+        android:backgroud="#ffffff"
+        android:textColor="#000000"
+        android:textSize="48sp"
+        android:layout_marginBottom="20dp"
+        />
 </RelativeLayout>
