--- a/app/src/main/res/layout/content_calculator.xml
+++ b/app/src/main/res/layout/content_calculator.xml
@@ -41,42 +41,189 @@
                 android:text="Copy"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/keypadCopy" />
+                android:id="@+id/keypadCopy"
+                android:textSize="20sp"/>
             <Button
                 android:text="C"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/keypadC" />
+                android:id="@+id/keypadC"
+                android:textSize="20sp"
+                android:padding="0dp"/>
             <Button
                 android:text="AC"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/keypadAC" />
+                android:id="@+id/keypadAC"
+                android:textSize="20sp"
+                android:padding="0dp"/>
             <Button
                 android:text="BS"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/keypadBS" />
+                android:id="@+id/keypadBS"
+                android:textSize="20sp"
+                android:padding="0dp"/>
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1">
+        <Button
+            android:text="7"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/keypad7" />
+        <Button
+            android:text="8"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/keypad8" />
+        <Button
+            android:text="9"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/keypad9" />
+        <Button
+            android:text="/"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:padding="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/keypadDivision" />
+
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1">
+            <Button
+                android:text="4"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:padding="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/kaypad4"/>
+            <Button
+                android:text="5"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/kaypad5"/>
+            <Button
+                android:text="6"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:padding="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/kaypad6"/>
+            <Button
+                android:text="*"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/Multiply"
+            />
+
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1">
+            <Button
+                android:text="1"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/kaypad1" />
+            <Button
+                android:text="2"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/kaypad2" />
+            <Button
+                android:text="3"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/kaypad3" />
+            <Button
+                android:text="-"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/minus" />
+
+        </TableRow>
+
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1">
+            <Button
+                android:text="0"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/zero"/>
+            <Button
+                android:text="."
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/dot"/>
+
+
+            <Button
+                android:text="="
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:padding="0dp"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/equl"/>
+            <Button
+                android:text="+"
+                android:textSize="20sp"
+                android:padding="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:id="@+id/plus"/>
+
+        </TableRow>
 
     </TableLayout>
 
